Fixes content-container overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -22,6 +22,7 @@
 
   .content-container {
     min-height: calc(100vh - 16rem);
+    overflow-x: hidden;
   }
 }
 
